# query-engine-acq

./: Cargo.toml  example-output.csv  input.txt  log.txt  output.csv
db/: beers.arrow  breweries.arrow  categories.arrow  locations.arrow  styles.arrow
src/: assignment.rs  engine.rs  lib.rs  main.rs  parser.rs  test.rs
src/data_structure/: database.rs  hypergraph.rs  join_tree.rs  mod.rs  parser.rs  query.rs  reader.rs  relational_algebra.rs  schema.rs  table.rs
src/database/: database_schema.rs  mod.rs  schema.rs
tests/: yannakakis_test.rs
