[package]
name = "query-engine-acq"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "49.0.0", features = ["prettyprint"] }
arrow-ord = "49.0.0"
arrow-csv = "49.0.0"
arrow-schema = "49.0.0"
arrow-select = "49.0.0"
arrow-row = "49.0.0"
serde = { version = "1.0.193", features = ["derive"] }
nom = "7.1.3"
log = "0.4.14"
env_logger = "0.9.0"